# NoteExtend

./: LICENSE  README.md  pyproject.toml
noteextend/: gui.py  main.py  pyinstaller.py
